--- a/LineSeparator/test.html
+++ b/LineSeparator/test.html
@@ -18,14 +18,16 @@
 				width: 50%;
 				font-size: 20px;
 				font-family: baskerville;
-
+			}
+			#result {
+				line-height: .5em;
 			}
 		</style>
 
 		<!-- Script Link -->
 		<script src="LineSep.js"> </script>
 	</head>
-	<body>
+	<body onload="TestScript()">
 		<div class = "container">
 			<div class = "textContainer">
 				<h1>
