--- a/LineSeparator/test.html
+++ b/LineSeparator/test.html
@@ -22,6 +22,12 @@
 			#result {
 				line-height: .5em;
 			}
+			.clone {
+				display: inline-block;
+				height: 0;
+				overflow: hidden;
+			}
+		
 		</style>
 
 		<!-- Script Link -->
@@ -47,9 +53,16 @@
 		<div class = "container">
 			<div class = "textContainer">
 				<p> <b> Text Sample </b> </p>
-				<p>
+				<p id = "test-text">
 					Hello Separator Tempor ut aute duis in in velit amet dolore ut ea tempor nisi et culpa laboris ea esse velit amet proident dolor dolor ad sint anim nulla adipisicing deserunt reprehenderit sunt ea laborum cupidatat incididunt velit nostrud aliquip. 
 				</p>
+
+				<span  id = "test-text" class = "clone">
+					<p id = "clone-content">
+						Hello Separator Tempor ut aute duis in in velit amet dolore ut ea tempor nisi et culpa laboris ea esse velit amet proident dolor dolor ad sint anim nulla adipisicing deserunt reprehenderit sunt ea laborum cupidatat incididunt velit nostrud aliquip. 
+					</p>
+				</span>
+
 			</div>
 		</div>
 	</body>
